# clipsync

./: .gitignore  .mise.toml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  HOMEBREW.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PKGBUILD  PKGBUILD.git  PROJECT_STATUS.md  QUICKSTART.md  README.md  RELEASE.md  SETUP.md  TESTING.md  clipsync-server.service  clipsync.rb
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build-desktop.yml  build-server.yml  ci.yml
crates/common/: Cargo.toml
crates/common/src/: crypto.rs  lib.rs  protocol.rs  types.rs
crates/desktop/: Cargo.toml  clipsync-wrapper.sh  clipsync.desktop  tauri.conf.json
crates/desktop/icons/: .gitkeep  README.md  icon.icns
crates/desktop/src/: clipboard.rs  config.rs  lib.rs  main.rs  sync.rs
crates/server/: Cargo.toml
crates/server/src/: handler.rs  main.rs  room.rs
desktop/: index.html  package-lock.json  package.json  vite.config.js
desktop/src/: main.js
docker/: .dockerignore  Dockerfile  docker-compose.yml
scripts/: create_icons.py  generate-icons.sh  install-tauri-cli.sh  update-homebrew-formula.sh
