[package]
name = "clipsync-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "clipsync_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
clipsync-common = { path = "../common" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

arboard = { workspace = true }
clipboard-master = { workspace = true }

tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }

png = "0.18"
uuid = { version = "1.11", features = ["v4"] }
dirs = "6.0"
