[package]
name = "clipsync-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "clipsync-server"
path = "src/main.rs"

[dependencies]
clipsync-common = { path = "../common" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
